Skip to content
GitLab
Explore
Sign in
Remove old stock icons from table and cell Properties dialogs
Evolution 3.50.3
Debian testing
Steps:
New message
Insert a table
Right-click in the table → Properties → Cell
Icons on the left for cell and table selection are missing.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage.
More information