I#2679 - Remove old stock icons from table and cell Properties dialogs

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/2679